<resources>
    <string name="app_name">OStore</string>
    <string name="hintPhone">ফোন নাম্বার</string>
    <string name="hintPassword">পাসওয়ার্ড</string>
    <string name="ostoretextbangla">ওস্টোর লগইন</string>
    <string name="ostoreICon">Icon</string>
    <string name="login">লগইন</string>
    <string name="donthaveacc">কোন অ্যকাউন্ট নেই?</string>
    <string name="createnew">তৈরী করুন</string>
    <string name="forgetPass">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="registration">ওস্টোরে-নিবন্ধন করুন</string>
    <string name="firstname">আপনার নামের প্রথম অংশ</string>
    <string name="lastname">নামের শেষ অংশ</string>
    <string name="confirmpass">পাসওয়ার্ড নিশ্চিতকরণ</string>
    <string name="createaccbyreg">নিবন্ধন</string>
    <string name="alreadyhaveacc">ইতিমধ্যে নিবন্ধভুক্ত?</string>
    <string name="makelogin">লগইন করুন</string>
    <string name="quicksell">কুইক সেল</string>
    <string name="cashsell">নগদ বিক্রি</string>
    <string name="duesell">বাকিতে বিক্রি</string>
    <string name="downsell">কিস্তিতে বিক্রি</string>
    <string name="shortdetails">সংক্ষিপ্ত রিপোর্ট</string>
    <string name="totalsell">সর্বমোট বিক্রয়</string>
    <string name="receive">গ্রহীত</string>
    <string name="due">বকেয়া</string>
    <string name="others">অন্যান্য আয়</string>
    <string name="cost">ব্যায়</string>
    <string name="weeklysell">সাপ্তাহিক বিক্রয়</string>
    <string name="monthlysell">মাসিক বিক্রয়</string>
    <string name="yearlysell">বাৎসরিক বিক্রয়</string>
    <string name="productsellreport">বিক্রিত পণ্যের রিপোর্ট</string>
    <string name="usedaterange">তারিখ পরিশীমা ব্যবহার করে রিপোর্ট দেখুন</string>
    <string name="startdate">শুরু তারিখ</string>
    <string name="enddate">শেষ পর্যন্ত</string>
    <string name="action">Action</string>
    <string name="totalsellreport">সর্বমোট বিক্রি:</string>
    <string name="taka">টাকা</string>
    <string name="invoice">ইনভয়েস নং</string>
    <string name="productname">প্রোডাক্ট নাম</string>
    <string name="sellDate">বিক্রির তারিখ</string>
    <string name="quantity">পরিমাণ</string>
    <string name="unitprice">ইউনিট মূল্য</string>
    <string name="total">সর্বমোট</string>
    <string name="buyedproductreport">ক্রয়ক্রিত পন্যের রিপোর্ট</string>

    <string name="productCategory">পণ্য ক্যাটাগরি</string>
    <string name="buyDate">ক্রয়ের তারিখ</string>
    <string name="vendor">ভেন্ডর</string>
    <string name="actionBangla">অ্যাকশন</string>
    <string name="totalBuyed">সর্বমোট ক্রয়:</string>

    <string name="profitLossText">লাভ-ক্ষতির রিপোর্ট দেখুন</string>
    <string name="totalBuyRate">সর্বমোট ক্রয়মূল্য</string>
    <string name="totalSellRate">সর্বমোট বিক্রয়মূল্য</string>
    <string name="status">স্ট্যাটাস</string>

    <string name="allcategoryavgbuyrate">সব ক্যাটাগরির অ্যাভারেজ ক্রয়মূল্য:</string>
    <string name="averagesellrate">অ্যাভারেজ বিক্রয়মূল্য:></string>
    <string name="profitloss">লাভ-ক্ষতি:</string>

    <string name="loanDate">তারিখ</string>
    <string name="loanAmount">টাকার পরিমাণ</string>
    <string name="loanStatus">স্ট্যাটাস</string>
    <string name="loanMarfot">মারফৎ</string>
    <string name="loanAction">অ্যাকশন</string>

    <string name="addBorrow">ধার-দেনা যুক্ত করুন</string>
    <string name="addBank">ব্যাংক যুক্ত করুন</string>

    <string name="bankName">ব্যাংকের নাম</string>
    <string name="accountType">অ্যাকাউন্ট ধরণ</string>
    <string name="accountNumber">অ্যাকাউন্ট নাম্বার</string>
    <string name="openingBalance">ওপেনিং ব্যালেন্স</string>

    <string name="doTransaction">ট্রান্সেকশন করুন</string>
    <string name="operationTransaction">অপারেশন</string>
    <string name="addTransaction">ট্রান্সেকশন অ্যাড করুন</string>
    <string name="selectBankTxt">ব্যাংকের নাম নির্বাচন করুন</string>

    <string name="totalIncome">সর্বমোট আয়</string>
    <string name="totalCost">সর্বমোট ব্যয়</string>
    <string name="savings">সঞ্চিত অর্থ</string>

    <string name="from">উৎস</string>
    <string name="addIncomeCost">আয়-ব্যায় অ্যাড করুন</string>
    <string name="newVendorTxt">নতুন ভেন্ডর অ্যাড করুন</string>
    <string name="vendorName">ভেন্ডর নাম</string>
    <string name="vendorPhn">ফোন নাম্বার</string>
    <string name="vendorInstitution">প্রতিষ্ঠানের নাম</string>
    <string name="vendorAddress">ঠিকানা</string>

    <string name="customerName">কাস্টমার নাম</string>

    <string name="addNewCategory">নতুন ক্যাটাগরি অ্যাড করুন</string>

    <string name="categoryName">ক্যাটাগরি নাম</string>
    <string name="registeredDate">নিবন্ধিত তারিখ</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>