<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/sellReportCustomItemLayout"
    >

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/invoiceNo"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/invoice"/>
            <TextView
                android:id="@+id/productName"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/productname"/>
            <TextView
                android:id="@+id/sellDate"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sellDate"/>
            <TextView
                android:id="@+id/quantity"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity"/>
            <TextView
                android:id="@+id/unitPrice"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unitprice"/>
            <TextView
                android:id="@+id/total"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>