<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registration">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_margin="10dp"
                android:padding="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/firstname"
                style="@style/Widget.Ostore.TextInputLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/lastname"
                style="@style/Widget.Ostore.TextInputLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hintPhone"
                style="@style/Widget.Ostore.TextInputLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hintPassword"
                style="@style/Widget.Ostore.TextInputLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/confirmpass"
                style="@style/Widget.Ostore.TextInputLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextRegPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registrationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createaccbyreg"
                    android:layout_margin="8dp"

                    />

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhaveacc"
            />
        <TextView
            android:id="@+id/gotoLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makelogin"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>




</LinearLayout>