<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >


            <TextView
                android:id="@+id/productName"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/productname"/>
            <TextView
                android:id="@+id/totalBuyRate"
                android:padding="5dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/totalBuyRate"/>
            <TextView
                android:id="@+id/totalSellRate"
                android:padding="5dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/totalSellRate"/>
            <TextView
                android:id="@+id/status"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>