<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/vendorId"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="#"/>

            <TextView
                android:id="@+id/vendorName"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vendorName"/>
            <TextView
                android:id="@+id/vendorPhone"
                android:padding="5dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vendorPhn"/>
            <TextView
                android:id="@+id/vendorInstitution"
                android:padding="5dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vendorInstitution"/>
            <TextView
                android:id="@+id/vendorAddress"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vendorAddress"/>
            <TextView
                android:id="@+id/vendroAction"
                android:padding="5dp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loanAction"/>

            <ImageView
                android:id="@+id/deleteItemImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_delete_forever_24"
                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>